--- a/code/localSearchSimulatedAnnealing.ipynb
+++ b/code/localSearchSimulatedAnnealing.ipynb
@@ -51,8 +51,9 @@
         "# idea: Simulated Annealing\n",
         "# - start with greedy initial solution that covers all elements\n",
         "# - iteratively explores neighboring solutions by adding or removing subsets based on probability (50% chance to add, 50% to remove for example)\n",
-        "# - The cost function will minimize number of subsets and penalize uncovered elements\n",
+        "# - The cost function will minimize number of subsets (cost will be length of set of subsets)\n",
         "# - SA's temperature parameter starts at 100, uses cooling rate of 0.95 per iteration\n",
+        "# - after 10 iterations, if no improvement, algorithm will return the set cover\n",
         "\n",
         "# little confused on how to initialize the original guess - should we use greedy to initialize the guess, or just randomly initialize a guess"
       ],
