adding testing for approximation

--- a/code/approximation.ipynb
+++ b/code/approximation.ipynb
@@ -303,6 +303,37 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 50,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "  Dataset  Time (s)  size  RelErr\n",
+      "0   test1       0.0     2     0.0\n",
+      "1   test2       0.0     3     0.5\n",
+      "2   test3       0.0     6     0.0\n",
+      "3   test4       0.0     4     0.0\n",
+      "4   test5       0.0     4     0.0\n"
+     ]
+    }
+   ],
+   "source": [
+    "test_dataset = []\n",
+    "for i in range(1, 6):\n",
+    "    input = f'../data/test{i}.in'\n",
+    "    output = f'../data/test{i}.out'\n",
+    "    elapsed, alg_val, rel_err = run_and_measure(input, output)\n",
+    "    data = os.path.splitext(os.path.basename(input))[0]\n",
+    "    test_dataset.append((data, elapsed, alg_val, rel_err))\n",
+    "\n",
+    "test_df = pd.DataFrame(test_dataset, columns=['Dataset', 'Time (s)', 'size', 'RelErr'])\n",
+    "print(test_df)"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": 48,
    "metadata": {},
    "outputs": [
