fixed approx to return indices and return proper comprehensive table

--- a/code/approximation.ipynb
+++ b/code/approximation.ipynb
@@ -6,15 +6,12 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# Please implement an approximation\n",
-    "# algorithm for the Minimum Set Cover with approximation guarantees of O(log n).\n",
-    "# Hint: There is a simple and intuitive greedy algorithm that heuristically chooses a subset until U is\n",
-    "# covered and can achieve an approximation of O(log n). Can you come up with such an algorithm?"
+    "# DELETE FILE BEFORE SUBMITTING"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -31,9 +28,20 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 4,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "'\\napproximation guarantees of O(log n)\\nOPT is size of the optimal solution\\nk is size of the greedy solution\\nneed to show: GREEDY <= OPT * log n\\n    1. at each step, we pick the set that covers the most uncovered elements => GREEDY covers at least as many as any OPT set would\\n        - let m be the size of the set we picked\\n        - m <= size of the set OPT picked\\n    2. GREEDY covers at least >= remaining elements / size of the set we picked\\n    3. using recursion, let r_i be the number of remaining elements after i iterations\\n        5. r_i <= r_{i-1} - r_{i-1}/m (r_i = 0 is the goal => all elements are covered)\\n        6. r_i <= n(1 - 1/m)^i\\n        7. n(1 - 1/m)^k < 1     (take log of both sides)\\n        8. k >= m*log(n)         \\n        9. k = O(m*log(n))\\n        10. k = O(OPT*log n)    (since m <= OPT)\\n    11. k = O(log n)\\n'"
+      ]
+     },
+     "execution_count": 4,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "'''\n",
     "approximation guarantees of O(log n)\n",
@@ -57,7 +65,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -103,7 +111,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -124,7 +132,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 23,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [
     {
@@ -149,7 +157,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 34,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [
     {
@@ -173,7 +181,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 35,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [
     {
@@ -197,7 +205,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 36,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [
     {
@@ -221,7 +229,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 37,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [
     {
@@ -252,7 +260,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 43,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -263,7 +271,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 39,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -276,7 +284,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 40,
+   "execution_count": 14,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -286,7 +294,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 41,
+   "execution_count": 17,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -303,7 +311,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 50,
+   "execution_count": 18,
    "metadata": {},
    "outputs": [
     {
@@ -334,7 +342,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 48,
+   "execution_count": 19,
    "metadata": {},
    "outputs": [
     {
@@ -378,7 +386,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 49,
+   "execution_count": 20,
    "metadata": {},
    "outputs": [
     {
@@ -386,16 +394,16 @@
      "output_type": "stream",
      "text": [
       "    Dataset  Time (s)  size  RelErr\n",
-      "0    large1      0.36    50    0.00\n",
+      "0    large1      0.35    50    0.00\n",
       "1    large2      0.00    20    0.05\n",
-      "2    large3      0.01    17    0.13\n",
-      "3    large4      0.13   152    0.67\n",
+      "2    large3      0.00    17    0.13\n",
+      "3    large4      0.14   152    0.67\n",
       "4    large5      0.00     8    0.33\n",
       "5    large6      0.01     7    0.17\n",
       "6    large7      0.34   172    0.81\n",
       "7    large8      0.00     6    0.20\n",
       "8    large9      0.00    16    0.14\n",
-      "9   large10      0.29   318    0.44\n",
+      "9   large10      0.28   318    0.44\n",
       "10  large11      0.06    56    0.40\n",
       "11  large12      0.00    18    0.20\n"
      ]
@@ -412,6 +420,60 @@
     "\n",
     "large_df = pd.DataFrame(large_dataset, columns=['Dataset', 'Time (s)', 'size', 'RelErr'])\n",
     "print(large_df)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 23,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "    Dataset  Time (s)  size  RelErr\n",
+      "0     test1      0.00     2    0.00\n",
+      "1     test2      0.00     3    0.50\n",
+      "2     test3      0.00     6    0.00\n",
+      "3     test4      0.00     4    0.00\n",
+      "4     test5      0.00     4    0.00\n",
+      "5    small1      0.00     5    0.00\n",
+      "6    small2      0.00     4    0.33\n",
+      "7    small3      0.00     6    0.20\n",
+      "8    small4      0.00     5    0.25\n",
+      "9    small5      0.00     6    0.20\n",
+      "10   small6      0.00     4    0.33\n",
+      "11   small7      0.00     4    0.33\n",
+      "12   small8      0.00     3    0.50\n",
+      "13   small9      0.00     4    0.33\n",
+      "14  small10      0.00     3    0.50\n",
+      "15  small11      0.00     5    0.25\n",
+      "16  small12      0.00     4    0.33\n",
+      "17  small13      0.00     3    0.50\n",
+      "18  small14      0.00     3    0.50\n",
+      "19  small15      0.00     3    0.50\n",
+      "20  small16      0.00     3    0.50\n",
+      "21  small17      0.00     3    0.50\n",
+      "22  small18      0.00     3    0.50\n",
+      "23   large1      0.35    50    0.00\n",
+      "24   large2      0.00    20    0.05\n",
+      "25   large3      0.00    17    0.13\n",
+      "26   large4      0.14   152    0.67\n",
+      "27   large5      0.00     8    0.33\n",
+      "28   large6      0.01     7    0.17\n",
+      "29   large7      0.34   172    0.81\n",
+      "30   large8      0.00     6    0.20\n",
+      "31   large9      0.00    16    0.14\n",
+      "32  large10      0.28   318    0.44\n",
+      "33  large11      0.06    56    0.40\n",
+      "34  large12      0.00    18    0.20\n"
+     ]
+    }
+   ],
+   "source": [
+    "comprehensive_df = pd.concat([test_df, small_df, large_df], ignore_index=True)\n",
+    "print(comprehensive_df)\n",
+    "comprehensive_df.to_csv('comprehensive_approx.csv', index=False)"
    ]
   }
  ],
