Completed BnB changes.

--- a/code/bnb_test.ipynb
+++ b/code/bnb_test.ipynb
@@ -339,6 +339,95 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 5,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "import os\n",
+    "import csv\n",
+    "\n",
+    "def load_optimal_sizes_from_out(data_dir):\n",
+    "    \"\"\"\n",
+    "    Reads all .out files in the data_dir and maps instance names to their OPT values.\n",
+    "    Returns a dictionary: {instance_name: optimal_size}\n",
+    "    \"\"\"\n",
+    "    opt_dict = {}\n",
+    "    for filename in os.listdir(data_dir):\n",
+    "        if filename.endswith(\".out\"):\n",
+    "            instance = filename.replace(\".out\", \"\")\n",
+    "            path = os.path.join(data_dir, filename)\n",
+    "            with open(path, \"r\") as f:\n",
+    "                opt_size = int(f.readline().strip())\n",
+    "                opt_dict[instance] = opt_size\n",
+    "    return opt_dict\n",
+    "\n",
+    "def generate_bnb_csv_from_out(data_dir, output_dir, output_csv_path, cutoff=60):\n",
+    "    opt_map = load_optimal_sizes_from_out(data_dir)\n",
+    "\n",
+    "    rows = [(\"Dataset\", \"Time (s)\", \"size\", \"RelErr\")]\n",
+    "\n",
+    "    for file in sorted(os.listdir(output_dir)):\n",
+    "        if file.endswith(f\"_BnB_{cutoff}.sol\"):\n",
+    "            instance = file.split(f\"_BnB_{cutoff}.sol\")[0]\n",
+    "            sol_path = os.path.join(output_dir, file)\n",
+    "            trace_path = os.path.join(output_dir, f\"{instance}_BnB_{cutoff}.trace\")\n",
+    "\n",
+    "            # Read solution size\n",
+    "            with open(sol_path, \"r\") as f:\n",
+    "                size = int(f.readline().strip())\n",
+    "\n",
+    "            # Read last timestamp from trace\n",
+    "            try:\n",
+    "                with open(trace_path, \"r\") as tf:\n",
+    "                    lines = tf.readlines()\n",
+    "                    if lines:\n",
+    "                        time_taken = float(lines[-1].strip().split()[0])\n",
+    "                    else:\n",
+    "                        time_taken = 0.0\n",
+    "            except FileNotFoundError:\n",
+    "                time_taken = 0.0\n",
+    "\n",
+    "            # Compute relative error\n",
+    "            opt = opt_map.get(instance, None)\n",
+    "            if opt is not None and opt > 0:\n",
+    "                rel_err = round((size - opt) / opt, 2)\n",
+    "            else:\n",
+    "                rel_err = \"NA\"\n",
+    "\n",
+    "            rows.append((instance, round(time_taken, 2), size, rel_err))\n",
+    "\n",
+    "    # Write CSV\n",
+    "    with open(output_csv_path, \"w\", newline=\"\") as f:\n",
+    "        writer = csv.writer(f)\n",
+    "        writer.writerows(rows)\n",
+    "\n",
+    "    print(f\"CSV written to {output_csv_path}\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 6,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "CSV written to comprehensive_bnb.csv\n"
+     ]
+    }
+   ],
+   "source": [
+    "generate_bnb_csv_from_out(\n",
+    "    data_dir=\"../data\",\n",
+    "    output_dir=\"../output\",\n",
+    "    output_csv_path=\"comprehensive_bnb.csv\",\n",
+    "    cutoff=60\n",
+    ")"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": null,
    "metadata": {},
    "outputs": [],
